# smallpt

./: .gitignore  CMakeLists.txt  README.md  color.h  default.yaml  demo  demo.cpp  main.cpp  makefile  ray.h  sphere.h  test-yaml  test-yaml.cpp  vector.h
app/: CMakeLists.txt  mysmallpt.cpp
include/: color.h  ray.h  scene.h  sphere.h  vector.h
lib/: CMakeLists.txt
mpi/: CMakeLists.txt  mysmallpt-mpi.cpp
scene/: default.yaml  s1.yaml  s2.yaml
src/: color.cpp  scene.cpp  sphere.cpp  vector.cpp
